# ChangeLog for www-apache/mod_security
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_security/ChangeLog,v 1.114 2014/08/10 20:17:53 slyfox Exp $

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> mod_security-2.7.4.ebuild,
  mod_security-2.7.5.ebuild:
  QA: drop trailing '.' from DESCRIPTION

*mod_security-2.7.5 (01 Aug 2013)

  01 Aug 2013; Diego E. Pettenò <flameeyes@gentoo.org>
  +mod_security-2.7.5.ebuild, -mod_security-2.7.3.ebuild:
  Version bump; remove old.

  09 Jun 2013; Agostino Sarubbo <ago@gentoo.org> mod_security-2.7.4.ebuild:
  Stable for ppc, wrt bug #471690

  09 Jun 2013; Agostino Sarubbo <ago@gentoo.org> mod_security-2.7.4.ebuild:
  Stable for sparc, wrt bug #471690

  04 Jun 2013; Agostino Sarubbo <ago@gentoo.org> mod_security-2.7.4.ebuild:
  Stable for amd64, wrt bug #471690

  04 Jun 2013; Agostino Sarubbo <ago@gentoo.org> mod_security-2.7.4.ebuild:
  Stable for x86, wrt bug #471690

*mod_security-2.7.4 (29 May 2013)

  29 May 2013; Diego E. Pettenò <flameeyes@gentoo.org>
  +mod_security-2.7.4.ebuild, -mod_security-2.7.2.ebuild:
  Version bump; remove old.

  13 Apr 2013; Agostino Sarubbo <ago@gentoo.org> mod_security-2.7.3.ebuild:
  Stable for sparc, wrt bug #464188

  05 Apr 2013; Agostino Sarubbo <ago@gentoo.org> mod_security-2.7.3.ebuild:
  Stable for x86, wrt bug #464188

  05 Apr 2013; Agostino Sarubbo <ago@gentoo.org> mod_security-2.7.3.ebuild:
  Stable for ppc, wrt bug #464188

  03 Apr 2013; Agostino Sarubbo <ago@gentoo.org> mod_security-2.7.3.ebuild:
  Stable for amd64, wrt bug #464188

*mod_security-2.7.3 (29 Mar 2013)

  29 Mar 2013; Diego E. Pettenò <flameeyes@gentoo.org>
  +mod_security-2.7.3.ebuild, -mod_security-2.7.1.ebuild:
  Version bump.

  21 Feb 2013; Agostino Sarubbo <ago@gentoo.org> mod_security-2.7.2.ebuild:
  Stable for sparc, wrt bug #457864

  18 Feb 2013; Agostino Sarubbo <ago@gentoo.org> mod_security-2.7.2.ebuild: