@@ -4,14 +4,20 @@ Hash: SHA256
 AUX modsecurity-2.7.conf 394 SHA256 dba21b2c25146392aa0f2df66ca994d1c82222df26a842879fc3ca6a9096ae60 SHA512 ab8c1ee6372249613f853654f115102c7951ea021f47389510bca6c5d1226e7aa9d90bb47649cf4ca62b8d8f926eba9f5c0b02321851ec2e8452de70dd4c1839 WHIRLPOOL b78ed54075fb9da19bd08dd4993d071285da01b66dda9820882b9bf437c1ff431cf3b68e25d744950316d5e07b1c060f200ab01d48a5d78d7d271ec8c7048634
 DIST modsecurity-apache_2.7.4.tar.gz 1014983 SHA256 605d6f1b03e648001ef1c7db7b18d51c01edd443b57cbbd4e298770ffdcd0eb9 SHA512 5a3bc3e2845b05e33c43fd08458a91c5dfa37ecc8583abfd5bfdb52dbd405f1c6b8b9995ede22cb41eb42dce910dba657f298ba14a9d37addabde4b0ca02d5f2 WHIRLPOOL c83a92571469cde7aab960c56b96a082c68d9ad58f5ed549e08bf4e481147d0763b4c054d598ff509474d86048c048769bdc7c9e22669d957d2d28531fef96d7
 DIST modsecurity-apache_2.7.5.tar.gz 1045387 SHA256 9e907536278d8da80d3dbb29aeffe9c4ec37ce9b641035b2da64e993135647a2 SHA512 dd6d4b58c5abb7440d2b9a429a548485b5aebecf1859c93427bdcf30cdbc93c975e455f3f843cf82c4efdf2db06f6a43bf4db2bfdd84adabddeb5dabacedc141 WHIRLPOOL 4d71f3ae86ca1dda9d1547b140decde24ee5116733ecf86a0a95797e3ce9bf1e29cf42116a2a69b332132c3ad749fe5f18566bbe7dc6d60f47b378a0ef6d6cbc
+DIST modsecurity-apache_2.7.7.tar.gz 1003835 SHA256 11e05cfa6b363c2844c6412a40ff16f0021e302152b38870fd1f2f44b204379b SHA512 859f72580b6acaae5db180f98ee32ad2cb0f3ef24321d0c2df20ddd9fcfbc6c09c98b672012dc4931a6fd14f3c21c38ed31ab8900940382fcb48b37f30005a7d WHIRLPOOL e70f09c6bf640733696e6c544b4e37702ab05b043bdf07266a081316620986e976d2dcf8c1552380e846132473718b3ae7f0cadd18953b08b22bef5de3a5b455
 EBUILD mod_security-2.7.4.ebuild 2524 SHA256 ac98bfc1f4788a1179271cdab041feee02e16cb032c0db033a5cfba8a6c3f9a3 SHA512 3cbecc62595fd1ee933d8e6fe9c50e91865d90bddafd685fcd52249065fa1ccdd47b6c4e18f3ed49697202f5afee2fe60cb994667a550ecc9c920e814581e7d8 WHIRLPOOL 6dd58e7cff9a796acb16da4381cdc71d469fd3de56f21b902b882af09d1698fab9bfaa413f07b8456679421dae694edee4d8dfedbf2fd867f5d2c33f0fb8d72c
 EBUILD mod_security-2.7.5.ebuild 2528 SHA256 7915612efc9e8856105dd00e71d8c2cc25633df82ce435247fdab9048e0d79b4 SHA512 1e8079e740164bb1c77f247f63d269c371d3cab991c99a3d40458a5ca8a217304cc86827a006105e8bfd0141320e5ef6728a0d3726e4a98c633d86fe7624671b WHIRLPOOL 7abe6143063f0b70dea3e0ddc571701348c629473da71c8cdf78015c0f1f5df48af1331680660fe5381c588681059a793720cdaeb5f99236d5aaae4163ac6441
-MISC ChangeLog 23308 SHA256 a1ab8fbbd80d121ad58cab7f2a888a9de4fcb817a8b81660fbda4a20af48e1e1 SHA512 7b9866a3d2530d4d4a4b394d2b3120180da24e26927a70e34d69d78c4a2e536b8a81331e43c5b99f345e71cc496273f896e1287c5c287c6e6cfd5f440c93a92b WHIRLPOOL 84d11ddb991939087fbe19eb9646b9d6ed1ee5fe3c1ebd13bc55c757701e6289aaa6a2dcec28b57419c6cb9bf310dced4724070e0797d290af9435b49ba068ed
+EBUILD mod_security-2.7.7.ebuild 2531 SHA256 5a1c06ce3d4822d080b873d90342577b60f8bd06f1b1336b621cd053fcbd6380 SHA512 48ff774381d556957c000fcdc510e67f2926b57fab794eb83947200745bc02b57a4a27b3e369e08691ea7ab9037ba518c946dadd88e2d85f51c62250c06dbc43 WHIRLPOOL bf4f288e5e0cb658abc8e9340d82a9cacae792c623e185727cd32bc826511f544f2cd48a4b00085754f5c37b65290290de6d791e5b10c9a9afdfb2932b588e7d
+MISC ChangeLog 23449 SHA256 d2cfe4edc5e928d7eb0ed7af25a3dfe7cc9beafd7ac6dada7ebc1d94e5889c60 SHA512 270abc3a1d6764943a8474b7f22a360e0e2914b97c7dc6e6b06006b7a38d86e802d33d7d676a242dc1dd5cc8bce6218be62a92e0db7858e047f46eac77b31816 WHIRLPOOL 5f41ed2138e8aa8193bad985f4f6677fe4fd9915d55db109ccd24ffe15ba2868454c103777a220e986344cd1605e9a48570c0cc620fdec6fa81f191badd93f2f
 MISC metadata.xml 896 SHA256 b788f24cadf7e0daf6c0a97078d7427367e37ba6f129cc591fac0e0c415ade24 SHA512 1a1914552d4c75e372aa8debc1f1772556cd450e3516f82e257e66155b830f89fece0f1afe3b54689a87c18f2b1baf50cf2b58c2c7343f604869b1cb46afa488 WHIRLPOOL abbbd826477cb8cd180ec0824f07480dacbd3449f7a07cd11db41b515def50ee132c7fd9bb8f1545ecdfc637e632d9cfa7920aa5ddcc93c162437d8dbb3586f4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlPn03IACgkQcaHudmEf86prUwCbB4PoTyjfvN6TfFgt4xTi/0QL
-UY4AnR1CrHqMo/mp6A67ww4Gs45xg6R/
-=J8vV
+iQEcBAEBCAAGBQJULufkAAoJEBzRPIrUMBNCLW4H/ilrul2gJ4+XV1ilWSmGG4V7
+s+oUglDkI9mmvdxw8FbCSEX7ymWCXtgiDcFD2V0qMCDdwM5FaYiilkX9x7zwjXbd
+btOUIkKvDUb2EnJaQOosTgz3RXUND7QXv8+pc4B1hJD9aBt5yiUXh2PuN8EKFZrm
+CejDKGqo/Xo3oXV5JcfVBj4xEXiKNgiPFvR6ifg62i2+s1Qy57HhiN6V/IGzDPKK
+AhcjlgYbikTneGVkydz7IIzefrDnbAgVhlqcp+3MYK+2WbgSNHwoXhvUpzHYBxKJ
+iCc9xv+ZaGHwqhy6JZWzuDf95SXUxkWryI0sTDQGs+wsvOtt5ItGZq9tlFkc4jc=
+=gz+c
 -----END PGP SIGNATURE-----
