@@ -1,6 +1,12 @@
 # ChangeLog for www-apache/mod_security
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_security/ChangeLog,v 1.114 2014/08/10 20:17:53 slyfox Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_security/ChangeLog,v 1.115 2014/10/03 18:15:58 flameeyes Exp $
+
+*mod_security-2.7.7 (03 Oct 2014)
+
+  03 Oct 2014; Diego E. Pettenò <flameeyes@gentoo.org>
+  +mod_security-2.7.7.ebuild:
+  Version bump.
 
   10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> mod_security-2.7.4.ebuild,
   mod_security-2.7.5.ebuild:
